# ntm_classifier

./: .gitignore  Readme.md  pyproject.toml  requirements.txt  scratchpad_training.py  setup.py
ntm_classifier/: check_tqdm.py  classifier.py  extract.py  fscores.py  image_from_document.py  load_resources.py  model_training.py  postprocess.py  preprocess.py  report.py
ntm_classifier/training/: image_dataset.py  tag_reprocess_util.py  trainer.py
ntm_classifier/utils_e2/: pdf2xml.py
ntm_data/: mappings.json
ntm_data/table_data/: primary_tags.csv  secondary_tags.csv  tags.csv  tags.json  tertiary_tags.csv
ntm_data/test_files/: sample_array.pkl  sample_tensor.pt  second_xml.xml  test_xml.xml  uncombined_bboxes.txt
test/: test_classification.py  test_dataset.py  test_extract.py  test_loading.py  test_pdf2xml.py  test_report.py  test_tag_reprocess.py  test_trainer.py  test_training_process.py  test_whiteout.py
