[tool.poetry]
name = "ntm_classifier"
version = "0.1.0"
description = "external classification module for ntm"
authors = ["Araminty Whitesell <araminty.whitesell@macefusion.com>"]
packages = [
    { include = "ntm_classifier" },
    { include = "ntm_data" },
]

[tool.poetry.dependencies]
python = "^3.8"
torch = ">=1.10.1"
torchvision = ">=0.11.1"
pandas = "^1.4.1"
tqdm = "^4.63.0"
sklearn = "^0.0"
matplotlib = "^3.5.1"
PyPDF2 = "^1.26.0"
"pdfminer.six" = "^20211012"
pytest = "^7.0.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
